# P10_system_rag_performances

./: .gitignore  Makefile  MistralChat.py  README.md  indexer.py  load_excel_to_db.py  pyproject.toml  rapport_deval.ipynb  regular+NBA+(2).xlsx
Sql_db/: load_excel_to_db.py  sql_tool.py
ragas_part/: ans_cont_recup_ragas.py  evaluate_ragas.py  log_ragass.json  ragas_dataset.json
tests/: conftest.py
tests/functional/: test_indexer.py  test_rag_pipeline.py  test_sql_pipeline.py
tests/integration/: test_live_mistral.py  test_live_postgres.py
tests/unit/: test_chatbot.py  test_data_loader.py  test_load_excel_to_db.py  test_schemas.py  test_sql_tool.py  test_vector_store.py
utils/: ans_cont_recup_ragas.py  chatbot.py  config.py  data_loader.py  evaluate_ragas.py  observability.py  ragas_dataset.json  schemas.py  sql_tool.py  vector_store.py
vector_db/: document_chunks.pkl  faiss_index.idx
